<resources>
    <string name="app_name">DemoApplication</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="mobile">Mobile:</string>
    <string name="add">Add</string>
    <string name="details">Details</string>
    <string name="tbName">Name</string>
    <string name="tbEmail">Email</string>
    <string name="tbMobile">Mobile</string>
    <string name="push">Push</string>
</resources>
