<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="15dp"
        android:weightSum="1">
        <EditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:hint="Search Details"/>
        <Button
            android:id="@+id/btSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:visibility="gone"
            android:text="Search"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#686767" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#686767" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tbName"
                    android:layout_weight="1.2"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#686767" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tbEmail"
                    android:layout_weight="2.6"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#686767" />
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:gravity="center_horizontal"
                    android:text="@string/tbMobile"
                    android:textSize="15sp" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#686767" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#686767" />
        </LinearLayout>


    <android.support.v7.widget.RecyclerView
    android:id="@+id/rvName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:scrollbars="vertical"/>
    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->
            <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/rvName"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:scrollbars="vertical"/>-->
            <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/rvEmail"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:scrollbars="vertical"/>-->
            <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/rvMobile"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:scrollbars="vertical"/>-->

        <!--</LinearLayout>-->
    <!--</ScrollView>-->

</LinearLayout>